# chimera

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml  run_api  test_imports.py
.chimera-dev/agents/architecture/: CLAUDE.md  INDEX.md
.chimera-dev/agents/tests/: CLAUDE.md  INDEX.md
.github/workflows/: ci.yml
agents/: jarvis.yaml
api/: main.py  stream_handler.py  test_debug.py  test_stream.py
blueprints/: blueprint_example.py  first_blueprint.json  first_blueprint.py
cli/: config.json  config.py  main.py  run.py  session.py
cli/core/: blueprint.py  thread_protocol.py  vsp_consumer.py
cli/effects/: colors.py  display.py
cli/ui/: blueprint_selector.py  prompt.py  thread_resume.py
core/: __init__.py  agent.py  base.py  base_plugin.py  baseplugin.py  models.py  thread.py  thread_state.py  widget.py  widget_registry.py
core/protocols/: __init__.py  readable_thread_state.py  transformer.py
core/spaces/: __init__.py  base.py  generic_space.py
core/temp/: blueprint_example.py  thread-v1graph.py
core/threadprotocol/: blueprint.py  reader.py  transformer.py  writer.py
core/widgets/: __init__.py  context_docs.py  qa_widget.py
defs/agents/: doc-summarizer.yaml  engineering.yaml  kimi-engineer.yaml  qwen.yaml
defs/blueprints/chat/: blueprint.json
defs/blueprints/doc-summarizer/: agent.py  blueprint.json
defs/blueprints/engineering/: agent.py  blueprint.json
defs/blueprints/kimi-engineer/: agent.py  blueprint.json
defs/blueprints/qwen/: agent.py  blueprint.json
frontend/: .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/tests/: setup.ts
frontend/tests/helpers/: index.ts  sse-mock.ts  test-utils.tsx
frontend/tests/lib/: chimera-transport.test.ts  jsonl-hydrator.test.ts
frontend/tests/stores/: blueprintStore.test.ts
tests/core/: test_agent.py  test_widget_hydration.py
tests/core/threadprotocol/: __init__.py  test_blueprint.py  test_blueprint_integration.py
tests/core/widgets/: test_qa_widget.py
tests/fixtures/agents/: jarvis.yaml
tests/python/: conftest.py
tests/python/core/integration/threadprotocol/: test_basic_conversation.py  test_validation.py
tests/python/core/unit/: test_agent.py  test_blueprint.py  test_multimodal.py  test_output_types.py
tests/python/core/unit/models/: test_registry.py
tests/python/core/unit/spaces/: test_cron_summarizer_space.py  test_space_factory.py
tests/python/helpers/: __init__.py  event_assertions.py  function_models.py  graph_fixtures.py  thread_history_builder.py
