[project]
name = "chimera"
version = "0.1.0"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "mypy>=1.15.0",
    "ruff>=0.9.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
chimera-core = { workspace = true }
chimera-api = { workspace = true }
chimera-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests/python"]
asyncio_mode = "auto"
